test/error/ptr_arg_array.gw
typedef void(my_func)(int i[4]){}
